[workspace]
resolver = "2"

members = [
    "crates/tyr-common",
    "crates/tyr-lexer",
    "crates/tyr-parser",
    "crates/tyr-ast",
    "crates/tyr-sema",
    "crates/tyr-hir",
    "crates/tyr-backend",
    "crates/tyr-driver",
    "crates/tyrc"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["The Tyr Project"]
repository = "https://github.com/thetyrproject/tyrc"
rust-version = "1.88"

[workspace.dependencies]
tyr-common = { path = "crates/tyr-common" }
tyr-lexer = { path = "crates/tyr-lexer" }
tyr-ast = { path = "crates/tyr-ast" }
tyr-parser = { path = "crates/tyr-parser" }