[package]
name = "tyr-ast"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

description = "Abstract Syntax Tree model for the Tyr Hardware Description Language."
readme = "README.md"

[dependencies]
tyr-common.workspace = true